--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -71,8 +71,9 @@ body {
     /* color: rgb(216, 212, 212); */
 }
 
-form input[name="city"],
-form input[name="country"] {
+input[name="city"],
+input[name="country"] {
+    // animation: fade-in 0.5s ease;
     background-color: transparent;
     box-shadow: none;
     border-radius: 0%;
@@ -84,16 +85,32 @@ form input[name="country"] {
     color: white;
     font-size: 24px;
     margin: 20px;
+    animation: fade-out 0.5s ease;
 }
 
-form input:focus {
+input[name="city"]:focus,
+input[name="country"]:focus {
     /* width: 100px; */
     background-color: transparent;
     border-bottom: 2px solid rgb(81, 115, 189);
 }
 
-form input::placeholder {
+input[name="city"]::placeholder,
+input[name="country"]::placeholder {
     color: white;
+}
+
+input[name="city"].input-city-error {
+    animation: fade-in 1.5s ease;
+    border-bottom: 2px solid rgb(255, 0, 0);
+}
+input[name="city"].input-city-error:focus {
+    border-bottom: 2px solid rgb(255, 0, 0);
+}
+
+input[name="city"].input-city-error::placeholder {
+    // animation: fade-in 1.5s ease;
+    color: red;
 }
 
 input[type="submit"] {
@@ -102,6 +119,20 @@ input[type="submit"] {
     color: white;
     font-size: 24px;
     border-radius: 10%;
+}
+
+.input-error {
+    font-size: 32px;
+    color: red;
+    text-align: center;
+    font-weight: normal;
+    text-decoration: underline;
+    animation-name: input-error-slide;
+    animation-duration: 7s;
+}
+
+.hide {
+    display: none;
 }
 
 #location {
@@ -114,84 +145,55 @@ input[type="submit"] {
         font-size: 40px;
     }
 }
-
-/* button {
-    display: inline-block;
-    font-family: "Montserrat", "Trebuchet MS", Helvetica, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    position: relative;
-    padding: 0.8em 1.4em;
-    padding-right: 4.7em;
-    background: @button-colour;
-    border: none;
-    color: white;
-    transition: 0.2s;
-    &:before,
-    &:after {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        padding-top: inherit;
-        padding-bottom: inherit;
-        width: 2.8em;
-        content: "\00a0";
-        font-family: "FontAwesome", sans-serif;
-        font-size: 1.2em;
-        text-align: center;
-
-        transition: 0.2s;
-        transform-origin: 50% 60%;
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+        // border-bottom: 0px solid red;
     }
-    &:before {
-        background: @button-tint;
+    50% {
+        opacity: 1;
+        // border-bottom: 2px solid red;
     }
-    &:hover {
-        background: darken(@button-colour, 10%);
-    }
-    &:active,
-    &:focus {
-        background: darken(@button-colour, 30%);
-        outline: none;
+    100% {
+        opacity: 0;
+        // border-bottom: 0px solid red;
     }
 }
 
-.button {
-    min-width: 15em;
+@keyframes fade-out {
+    0% {
+        opacity: 0;
+        // border-bottom: 0px solid red;
+    }
+    100% {
+        opacity: 1;
+        // border-bottom: 2px solid red;
+    }
+    // 100% {
+    // opacity: 0;
+    // border-bottom: 0px solid red;
+    // }
 }
 
-.arrow {
-    background: #fe5f55;
-    &:hover {
-        background: darken(#fe5f55, 10%);
+@keyframes input-error-slide {
+    0% {
+        height: 0px;
+        opacity: 0;
     }
-    &:active,
-    &:focus {
-        background: darken(#fe5f55, 30%);
+    25% {
+        height: 50px;
+        opacity: 1;
     }
-    &:after {
-        content: "\F054";
+    50% {
+        height: 50px;
+        opacity: 1;
     }
-    &:hover:after {
-        -webkit-animation: bounceright 0.3s alternate ease infinite;
-        animation: bounceright 0.3s alternate ease infinite;
+    75% {
+        height: 50px;
+        opacity: 1;
     }
-}
-
-@-webkit-keyframes bounceright {
-    from {
-        -webkit-transform: translateX(0);
-    }
-    to {
-        -webkit-transform: translateX(3px);
+    100% {
+        height: 0px;
+        opacity: 0;
     }
 }
-
-@keyframes bounceright {
-    from {
-        transform: translateX(0);
-    }
-    to {
-        transform: translateX(3px);
-    }
-} */
