--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,30 +14,6 @@ header {
     margin: 20px;
 }
 
-#temperature {
-    margin: 20px auto;
-    justify-content: center;
-    width: 600px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    font-weight: normal;
-    font-size: 24px;
-    transition: all 1s ease;
-}
-
-#other-weather {
-    margin: 20px auto;
-    justify-content: center;
-    width: 600px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    font-weight: normal;
-    font-size: 24px;
-    transition: all 1s ease;
-}
-
 .temp-col {
     display: flex;
     flex-direction: column;
@@ -121,6 +97,37 @@ input[type="submit"] {
     border-radius: 10%;
 }
 
+.forecast-options p {
+    color: white;
+    font-size: 32px;
+    text-align: center;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.checkboxes {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 700px;
+    justify-content: space-around;
+    margin: 0px auto;
+}
+
+.checkboxes label {
+    color: white;
+    font-size: 18px;
+}
+
+.forecast-options-show {
+    animation: forecast-options-slide-out 2s ease;
+    height: 50px;
+}
+
+.forecast-options-hide {
+    animation: forecast-options-slide-in 2s ease;
+}
+
 .input-error {
     font-size: 32px;
     color: red;
@@ -145,6 +152,31 @@ input[type="submit"] {
         font-size: 40px;
     }
 }
+
+#temperature,
+#other-weather {
+    margin: 20px auto;
+    justify-content: center;
+    width: 600px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    font-weight: normal;
+    font-size: 24px;
+    transition: all 1s ease;
+    p {
+        color: white;
+        font-size: 22px;
+    }
+}
+
+.val {
+    font-weight: bold;
+    font-size: 24px;
+    color: whitesmoke;
+    text-decoration: underline;
+}
+
 @keyframes fade-in {
     0% {
         opacity: 0;
@@ -189,6 +221,28 @@ input[type="submit"] {
         opacity: 1;
     }
     75% {
+        height: 50px;
+        opacity: 1;
+    }
+    100% {
+        height: 0px;
+        opacity: 0;
+    }
+}
+
+@keyframes forecast-options-slide-out {
+    0% {
+        height: 0px;
+        opacity: 0;
+    }
+    100% {
+        height: 50px;
+        opacity: 1;
+    }
+}
+
+@keyframes forecast-options-slide-in {
+    0% {
         height: 50px;
         opacity: 1;
     }
